# api_yamdb-2

./: README.md  pyproject.toml  requirements.txt  setup.cfg
api_yamdb/api/: mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
api_yamdb/api/migrations/: 0001_initial.py
api_yamdb/api_yamdb/: settings.py  urls.py
api_yamdb/comments/: models.py  permissions.py  serializers.py  urls.py  views.py
api_yamdb/core/management/commands/: filling.py
api_yamdb/reviews/: models.py
api_yamdb/reviews/management/commands/: filling.py
api_yamdb/reviews/migrations/: 0001_initial.py  0002_auto_20220311_2125.py  0002_auto_20220312_1413.py  0002_genre_slug.py  0003_auto_20220312_1524.py
api_yamdb/titles/: exceptions.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
api_yamdb/titles/migrations/: 0001_initial.py  0002_auto_20220308_2137.py  0003_auto_20220308_2145.py  0004_title_genre.py
api_yamdb/users/: models.py
api_yamdb/users/migrations/: 0001_initial.py  0002_auto_20220306_1608.py  0002_auto_20220311_1533.py
tests/: common.py  conftest.py  test_00_user_registration.py  test_01_users.py  test_02_category.py  test_03_genre.py  test_04_title.py  test_05_review.py  test_06_comment.py  test_07_files.py
tests/fixtures/: fixture_user.py
